--- a/angular.json
+++ b/angular.json
@@ -30,16 +30,27 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": [],
+           "assets": [
+      {
+        "glob": "**/*",
+        "input": "public",
+        "output": "/"
+      },
+      {
+        "glob": "**/*",
+        "input": "src/assets",
+        "output": "/assets"
+      }
+    ],
+    "styles": [
+      "src/styles.css",
+      "node_modules/bootstrap/dist/css/bootstrap.min.css"
+       ],
+       "scripts": [
+        "node_modules/jquery/dist/jquery.js",
+        "node_modules/bootstrap/dist/js/bootstrap.min.js",
+        "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+       ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -107,5 +118,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "615430ab-ff29-4cde-b791-c938b210b1e7"
   }
 }
